# guilt92.github.io

./: Cargo.toml  README.md  Trunk.toml  config.toml  devnotes-site-6e0d4046eab4262.js  devnotes-site-6e0d4046eab4262_bg.wasm  index.html  style.css
.github/workflows/: deploy.yml  hugo-deploy.yml
archetypes/: default.md
assets/css/: style.css
assets/js/: site.js
content/: posts.json
content/posts/: async-rust-deep-dive.md  concurrent-web-crawler.md  deploying-rust-wasm-github-pages.md  error-handling-patterns.md  getting-started-minimal-blog.md  getting-started-rust-wasm.md  memory-safety-without-gc.md  tooling-fast-local-workflows.md  traits-and-generics.md  zero-cost-abstractions.md
layouts/: index.html  index.json.json
layouts/_default/: baseof.html  list.html  single.html
layouts/partials/: comments.html  footer.html  header.html  sidebar.html
src/: lib.rs  main.rs
static/css/: style.css
static/js/: progress.js  search.js
