[package]
name = "devnotes-site"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8.20", features = ["csr"] }
leptos_router = "0.8.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "Window",
    "Location",
    "Storage",
    "MediaQueryList",
    "console",
    "Node",
    "HtmlCollection",
    "CssStyleDeclaration",
] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-timers = "0.3"
